# z-monitor-switcher

./: .gitignore  README.md  README_EN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: linux-ubuntu-smoke-test.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.10.md  v0.1.11.md  v0.1.12.md  v0.1.13.md  v0.1.14.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clean_mode.rs  display_watch.rs  global_shortcut.rs  lib.rs  main.rs  post_action.rs
src-tauri/src/global_shortcut/: linux_portal.rs
src-tauri/src/monitor/: error.rs  linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/native_control/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: AdjustControls.tsx  CleanModeWindow.tsx  InputQuickSwitch.tsx  InputSwitcher.tsx  MonitorCard.tsx  MonitorList.tsx  NativeControls.tsx  PostActionDialog.tsx  Settings.tsx  TrayControlsWindow.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  select.tsx  slider.tsx
src/hooks/: useDebouncedCallback.ts  useKvm.ts  useMonitorAdjust.ts  useMonitorInput.ts  useMonitors.ts  useNativeControls.ts  useSettings.ts  useUpdater.ts
src/lib/: accelerators.ts  api.ts  autostart.ts  cleanMode.ts  events.ts  hotkeys.ts  i18n.tsx  monitor.ts  presets.ts  store.ts  tray.ts  types.ts
